# discovery-and-rotation-saas-dev

./: .gitignore  README.md  README_api.md  README_class.md  README_test.md  coveragerc  requirements.txt  setup.cfg  setup.py
.github/workflows/: catalog.yml  validate.yml
docker/: Dockerfile  README.md
examples/: hello_world.py
integrations/aws/: README.md  aws_password_rotation.py  aws_password_rotation_test.py
integrations/aws_cognito/: README.md  aws_cognito.py  aws_cognito_test.py  meta.yml
integrations/aws_secret_key/: README.md  aws_secret_key.py  aws_secret_key_test.py
integrations/azure_application_credential/: README.md  azure_application_credential.py  azure_application_credential_test.py  requirements_test.txt
integrations/azure_user/: README.md  azure_user_password_rotation.py  azure_user_password_rotation_test.py  requirements.txt
integrations/cisco-apic/: README.md  cisco_api_password_rotation_test.py  cisco_apic_password_rotation.py
integrations/cisco_apic/: README.md  README_development.md  cisco_apic.py  cisco_apic_test.py  meta.yml
integrations/cognito/: README.md  cognito_password_rotation.py  cognito_password_rotation_test.py  cogntio_password_rotation.py  cogntio_password_rotation_test.py
integrations/dell_idrac/: README.md  dell_idrac.py  dell_idrac_test.py
integrations/dummy/: README.md  dummy.py  dummy_test.py  meta.yml
kdnrm/: exceptions.py  log.py  saas_type.py  secret.py  utils.py
plugin_dev/: cli.py  test_base.py
workflow/: builtin.yml  package.py  validate.py  version.py  workflow_base.py
(+82 files in other folders)
