[metadata]
name = keeper-pam-saas-plugin-dev
version = attr: plugin_dev.__version__.__version__
description = PAM Gateway Plugin Development Environment
long_description = file: README.md
long_description_content_type = text/markdown
author = PAM team @ Keeper Security Inc.
author_email = sm@keepersecurity.com
url = https://keepersecurity.com/
source_url = https://github.com/Keeper-Security/discovery-and-rotation-saas-dev
license = MIT
classifiers =
    Environment :: Console
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Security
keywords = security, saas, pam

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    pydantic
    keeper-secrets-manager-core>=16.5.4
    click
    pydantic
    colorama

[options.packages.find]
where = .
exclude =
    tests

[options.entry_points]
console_scripts =
    plugin_test = plugin_dev.cli:main
